# teamtalk-reg-system-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  config.toml.example
.github/workflows/: build.yml
.sqlx/: prepare.db  query-148eb62e932811c7c1bce2e1f1f4668708a834d7e89adfb4bd4a9fb9c5b93c9b.json  query-1816ac84955bde39e05cb1069831e62e988369fe94873846327115e98816118c.json  query-1eb7674257e66d3dc9569a5dc79e7c6bfd03d1d3a93a6708323cea6551bd175d.json  query-2384a70982ab800a557ffad1e420901c1055eb1e5cdf78c68a30c731b5440cab.json  query-3ff32c632bff2ae04e67befa8420197a973464fa5818f1502dc2851f0b37c693.json  query-4781d3a082cb6f60afaccc18a247f29045df95fb341ca2a9a7b976248f2da0c4.json  query-4a87668f7e0143063674d88b8931c1f564b9451192ec211458d1363a3eb8135e.json  query-50935c79697bbbefc81ad4dcf9b2ee1325ac4b94c657869afc0b50d23d1e9504.json  query-71aad11ab2a41c3503adbaf0bb16f221223e5de9f4837ed34260dad9fe79a1bb.json  query-79c0a214be9455554d96e477477bd2c789010f5512b3f7ef0a38cd2d9f5e0b66.json  query-83457c68aefe46e913d28a9fd77598f1369698e022b0232c5215cf718a533d4e.json  query-88ac64e5f5e42f04c2004ec44cf8c2be775bdfb0736426fc42167f73999c32e8.json  query-8ed9cdad482d62dff85870e1dba2971f32f9aa46bb45ce53dac8046f72c79782.json  query-a0ba0fd23c865e19ac87bbdd6a72ee50d1be6726ed9781050003f1989fdff043.json  query-a28aa6bc27c2a9502f1f0a36d2d3d8234767eda839f45239f74ffe85896a8a79.json  query-aca647aab47de4571f812ec55f36fb2ecc088075a6e16c8c90939e699b9009ff.json  query-b400d6e0dbb2dd336fd6cd7014c42c2c497c692cb1ed6ffe6c03a994b3914dcf.json  query-c07011faf2a3be52e96f1dc35e3cbae51f529ca504f267ccb1b75ab7a389ef7b.json  query-c99163ab238cf7469adf36b3b348b7eeb01475a79fcb20aa9fd8742bf9289d3e.json  query-decfd0fef749aaff19637ce35ff502b5b3a962fa161701b0e3fe0179ff0afa3c.json  query-e651649c14477ddd62ac6a2c4737afb8352f929862f8fc4c206514b96c3c1763.json  query-eccb132fd5fad2581f7bacf9b71da2d85e66df3f22dd3821cbb64b40a9480037.json  query-f3cd508dfdafe36befb24d3cc76c2e88e5224357c28835fba1b9e9c4e3ae1079.json  query-fd2ad523b6beac91be8a956e13231237d196a614b26148d1749c84aed8e40b3f.json  query-fe8512faa11fe443fbb9ef7357d2e4ced94652557ebe25dfdf8a6c1fdbbe0f8e.json
db/: dev.db
locales/en/: main.ftl
locales/ru/: main.ftl
migrations/: 0001_init.sql  0002_indexes.sql  0003_compat.sql  0004_strict.sql  0005_created_at_defaults.sql
src/: config.rs  i18n.rs  main.rs  types.rs
src/db/: mod.rs  schema.rs
src/domain/: mod.rs
src/files/: links.rs  mod.rs  rights.rs  tt.rs  zip.rs
src/services/: admin.rs  mod.rs  registration.rs
src/tg_bot/: keyboards.rs  mod.rs
src/tg_bot/handlers/: admin.rs  mod.rs  registration.rs
src/tt/: mod.rs  worker.rs
src/web/: handlers.rs  mod.rs  templates.rs
templates/: register.html
