[package]
name = "teamtalk-reg-system-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "tracing"] }
axum = { version = "0.8.8", features = ["form"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-core = { version = "0.5.6" }
http = { version = "1.4.0" }
askama = { version = "0.15.1", default-features = false, features = ["derive", "std"] }
askama-derive-axum = { version = "0.1.4" }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
teamtalk = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
tracing = "0.1.44"
anyhow = "1.0.100"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
fluent = "0.17.0"
fluent-templates = "0.13.2"
unic-langid = "0.9.6"
mime_guess = "2.0.5"
walkdir = "2.5.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
clap = { version = "4.5.54", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }

[target.'cfg(not(windows))'.dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi"] }
