[package]
name = "teamtalk-reg-system-rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "TeamTalk registration service with Telegram bot and web endpoints"
repository = "https://github.com/kirill-jjj/teamtalk-reg-system-rs"
keywords = ["teamtalk", "telegram", "registration", "bot", "rust"]
categories = ["network-programming", "asynchronous", "web-programming"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "tracing"] }
axum = { version = "0.8.8", features = ["form"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-core = { version = "0.5.6" }
http = { version = "1.4.0" }
askama = { version = "0.15.1", default-features = false, features = ["derive", "std"] }
askama-derive-axum = { version = "0.1.4" }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
teamtalk = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
tracing = "0.1.44"
anyhow = "1.0.100"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
fluent = "0.17.0"
fluent-templates = "0.13.2"
unic-langid = "0.9.6"
mime_guess = "2.0.5"
walkdir = "2.5.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
clap = { version = "4.5.54", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }

[target.'cfg(not(windows))'.dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
multiple_crate_versions = "allow"

[lints.rust]
warnings = "deny"
future_incompatible = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
missing_docs = "deny"
